--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -176,3 +176,7 @@ i.hb-right {
 .show-when-not-hover-container:hover .show-when-not-hover {
   display: none;
 }
+
+.hb-card-menu {
+  height: 50px;
+}
