Finishing card header menu

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -180,3 +180,11 @@ i.hb-right {
 .hb-card-menu {
   height: 50px;
 }
+
+.hb-description-list > dt {
+  color: white;
+}
+
+.hb-none {
+  display: none;
+}
