Remove control diagrams from analytic dashboard

--- a/lib/health_board_web/templates/layout/root.html.leex
+++ b/lib/health_board_web/templates/layout/root.html.leex
@@ -39,7 +39,7 @@
                   <ul class="uk-nav-sub">
                     <%= for %{name: name, id: card_id} <- section.cards do %>
                       <li>
-                        <a href="#<%= card_id %>">
+                        <a href="#to_<%= card_id %>">
                           <%= name %>
                         </a>
                       </li>
