--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,6 +8,11 @@ $warning: #ffee00;
 $danger: #af1038;
 $disabled: #777;
 
+$blue-1: #1d3a87;
+$blue-2: #3653a1;
+$blue-3: #546cac;
+$blue-4: #5675ca;
+
 .hb-border {
   border-style: solid;
   border-width: 3px;
@@ -190,4 +195,58 @@ i.hb-right {
 .hb-none {
   display: none;
   visibility: hidden;
+}
+
+.hb-circular{
+  animation: rotate 2s linear infinite;
+  height: 100px;
+  width: 100px;
+  position: relative;
+}
+
+.hb-path {
+  stroke-dasharray: 1,200;
+  stroke-dashoffset: 0;
+  stroke:#B6463A;
+  animation:
+   dash 1.5s ease-in-out infinite,
+   color 6s ease-in-out infinite
+  ;
+  stroke-linecap: round;
+}
+
+@keyframes rotate{
+ 100%{
+  transform: rotate(360deg);
+ }
+}
+
+@keyframes dash{
+ 0%{
+  stroke-dasharray: 1,200;
+  stroke-dashoffset: 0;
+ }
+ 50%{
+  stroke-dasharray: 89,200;
+  stroke-dashoffset: -35;
+ }
+ 100%{
+  stroke-dasharray: 89,200;
+  stroke-dashoffset: -124;
+ }
+}
+
+@keyframes color{
+  100%, 0%{
+    stroke: $blue-1;
+  }
+  40%{
+    stroke: $blue-2;
+  }
+  66%{
+    stroke: $blue-3;
+  }
+  80%, 90%{
+    stroke: $blue-4;
+  }
 }
