Create ICU Occupation dashboard

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,6 +4,7 @@
 
 @import '../node_modules/leaflet/dist/leaflet.css';
 @import '../node_modules/nprogress/nprogress.css';
+@import '../node_modules/leaflet.fullscreen/Control.FullScreen.css';
 
 iframe[hidden] {
   @apply hidden
